# task-api

./: .env  .env.example  Dockerfile  README.md  entrypoint.sh  fly.toml  justfile  main.py  pyproject.toml  tasks.db
.zed/: settings.json
alembic/: env.py
alembic/versions/: 15b6ff9b9673_tasks_has_many_labels.py  73b9db23531f_validations.py  87590164802b_init.py  881e76e19540_init.py  cb6aa55aeaa3_label_name_is_unique_and_indexed.py  d00a5662ef4a_add_color_to_label.py  d5361b4b9300_support_utc_timezone.py  e0084ff5f464_refactor.py  e24820ce5fc2_ensure_delete.py  ed77dd8273a1_fix_timestamps.py  f202dec6bdb9_add_color_to_project.py  fb657b0234fb_init.py
app/: api.py  deps.py  main.py  models.py  schema.py
app/api/: main.py
app/api/routes/: tasks.py
app/core/: config.py  cors.py  db.py  logging.py  security.py
app/database/: config.py
app/db/: session.py
app/models/: task.py
app/routers/: auth.py  labels.py  projects.py  tasks.py  users.py
app/routes/: tasks.py
